puzzle_game_interactional_motivation.py

--- a/doc/IM_Tutorial.ipynb
+++ b/doc/IM_Tutorial.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Objectives\n",
     "\n",
-    "Upon completing this tutorial, you will be able to adjust the valence of an Interactional Motivation (IM) system to design an agent that generates the behavior you intend."
+    "Upon completing this tutorial, you will be able to adjust the valence of an Interactional Motivation (IM) system to design an agent that generates pray or flee behavior."
    ]
   },
   {
@@ -426,15 +426,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "3e654a53-51f5-460a-9ad5-569ac9240783",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Actions\n",
     "FORWARD = 0\n",
-    "TURN_LEFT = 1\n",
-    "TURN_RIGHT = 2\n",
+    "TURN_LEFT = 2\n",
+    "TURN_RIGHT = 1\n",
     "\n",
     "# Outcomes\n",
     "STABLE = 0\n",
@@ -1018,6 +1018,14 @@
     "    e.save(step)  # Save a screenshot \n",
     "    e.clear(True)\n",
     "    outcome = e.outcome(action)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8dbd8b7-3c38-4fa5-a5de-47590f6c3823",
+   "metadata": {},
+   "source": [
+    "Observe that, after catching a few targets, the agent learns to reach the target efficiently by following a stair-case trajectory until it aligns itself with the target moves straigt to it. "
    ]
   },
   {
