--- a/doc/IM_Tutorial.ipynb
+++ b/doc/IM_Tutorial.ipynb
@@ -512,9 +512,9 @@
     "        ])\n",
     "        self.previous_smell = 0\n",
     "        self.smell_feedback = np.array([\n",
-    "            [STABLE,   INCREASE_LEFT, INCREASE_RIGHT, INCREASE_FRONT], \n",
-    "            [DECREASE, INCREASE_LEFT, STABLE,         INCREASE_FRONT], \n",
-    "            [DECREASE, STABLE,        INCREASE_RIGHT, INCREASE_FRONT], \n",
+    "            [STABLE,   INCREASE_RIGHT, INCREASE_LEFT, INCREASE_FRONT], \n",
+    "            [DECREASE, INCREASE_RIGHT, STABLE,         INCREASE_FRONT], \n",
+    "            [DECREASE, STABLE,        INCREASE_LEFT, INCREASE_FRONT], \n",
     "            [DECREASE, DECREASE,      DECREASE,       INCREASE_FRONT] \n",
     "        ])\n",
     "        \n",
@@ -528,7 +528,7 @@
     "        # print(f\"Smell up-left:{smell_up_left}, up-right:{smell_up_right}, down-left:{smell_down_left}, down-right:{smell_down_right}\")\n",
     "        smell_left = {LEFT: smell_down_left, DOWN: smell_down_right, RIGHT: smell_up_right, UP: smell_up_left}[self.direction]\n",
     "        smell_right = {LEFT: smell_up_left, DOWN: smell_down_left, RIGHT: smell_down_right, UP: smell_up_right}[self.direction]\n",
-    "        smell = smell_left + 2 * smell_right \n",
+    "        smell = 2 * smell_left + smell_right \n",
     "        result = self.smell_feedback[self.previous_smell, smell]\n",
     "        self.previous_smell = smell\n",
     "        return result\n",
