Animate the bumping in the representation view

--- a/doc/IM_Tutorial.ipynb
+++ b/doc/IM_Tutorial.ipynb
@@ -481,6 +481,12 @@
     "DOWN = 1\n",
     "RIGHT = 2\n",
     "UP = 3\n",
+    "SMELL_FEEDBACK = np.array([\n",
+    "    [STABLE,   INCREASE_RIGHT, INCREASE_LEFT, INCREASE_FRONT], \n",
+    "    [DECREASE, INCREASE_RIGHT, STABLE,         INCREASE_FRONT], \n",
+    "    [DECREASE, STABLE,        INCREASE_LEFT, INCREASE_FRONT], \n",
+    "    [DECREASE, DECREASE,      DECREASE,       INCREASE_FRONT] \n",
+    "])\n",
     "\n",
     "class Environment():\n",
     "    def __init__(self, position, direction):\n",
@@ -511,13 +517,6 @@
     "            [-1, 0]   # Up\n",
     "        ])\n",
     "        self.previous_smell = 0\n",
-    "        self.smell_feedback = np.array([\n",
-    "            [STABLE,   INCREASE_RIGHT, INCREASE_LEFT, INCREASE_FRONT], \n",
-    "            [DECREASE, INCREASE_RIGHT, STABLE,         INCREASE_FRONT], \n",
-    "            [DECREASE, STABLE,        INCREASE_LEFT, INCREASE_FRONT], \n",
-    "            [DECREASE, DECREASE,      DECREASE,       INCREASE_FRONT] \n",
-    "        ])\n",
-    "        \n",
     "\n",
     "    def smell(self):\n",
     "        \"\"\"Return the smell feedback: 1: smell left, 2: smell right, 3: smell front\"\"\"\n",
@@ -529,7 +528,7 @@
     "        smell_left = {LEFT: smell_down_left, DOWN: smell_down_right, RIGHT: smell_up_right, UP: smell_up_left}[self.direction]\n",
     "        smell_right = {LEFT: smell_up_left, DOWN: smell_down_left, RIGHT: smell_down_right, UP: smell_up_right}[self.direction]\n",
     "        smell = 2 * smell_left + smell_right \n",
-    "        result = self.smell_feedback[self.previous_smell, smell]\n",
+    "        result = SMELL_FEEDBACK[self.previous_smell, smell]\n",
     "        self.previous_smell = smell\n",
     "        return result\n",
     "    \n",
