--- a/doc/IM_Tutorial.ipynb
+++ b/doc/IM_Tutorial.ipynb
@@ -15,7 +15,19 @@
    "source": [
     "# Objectives\n",
     "\n",
-    "Upon completing this tutorial, you will be able to adjust the valence of an Interactional Motivation (IM) system to design an agent that generates pray or flee behavior."
+    "Upon completing this tutorial, you will be able to adjust the valence of an Interactional Motivation (IM) system to design an agent that generates pray or flee behavior.\n",
+    "\n",
+    "See the full tutorial at https://github.com/PetiteIA/schema_mechanism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04c8d3a3-8881-41a0-92ea-5dea496c9c83",
+   "metadata": {},
+   "source": [
+    "![AIRIS_record](movie.gif)\n",
+    "\n",
+    "_Animation 1: Prey behavior in AIRIS_"
    ]
   },
   {
