interactional_motivation.md

--- a/doc/IM_Tutorial.ipynb
+++ b/doc/IM_Tutorial.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "Upon completing this tutorial, you will be able to adjust the valence of an Interactional Motivation (IM) system to design an agent that generates pray or flee behavior.\n",
     "\n",
-    "See the full tutorial at https://github.com/PetiteIA/schema_mechanism"
+    "See the full tutorial at https://github.com/PetiteIA/schema_mechanism\n",
+    "\n",
+    "See Interactional Motivation in AIRIS at [interactional_motivation.md](interactional_motivation.md)."
    ]
   },
   {
@@ -25,9 +27,9 @@
    "id": "04c8d3a3-8881-41a0-92ea-5dea496c9c83",
    "metadata": {},
    "source": [
-    "![AIRIS_record](movie.gif)\n",
+    "![IM_in AIRIS](img/Figure_1_IM_AIRIS.png)\n",
     "\n",
-    "_Animation 1: Prey behavior in AIRIS_"
+    "_Figure 1: Interactional motivation in AIRIS_"
    ]
   },
   {
@@ -431,7 +433,7 @@
    "id": "6668e949-1dc6-447b-8f76-c7d1ba0ef4f7",
    "metadata": {},
    "source": [
-    "![Agent11](img/Figure_1_vision.svg)\n",
+    "![Agent11](img/Figure_2_vision.svg)\n",
     "\n",
     "_Figure 1: Distal sensory field_"
    ]
@@ -1026,7 +1028,7 @@
     "        e.maze[target_positions[step][0], target_positions[step][1]] = TARGET\n",
     "    action = a.action(outcome)\n",
     "    e.display()\n",
-    "    e.save(step)  # Save a screenshot \n",
+    "    # e.save(step)  # Save a screenshot \n",
     "    e.clear(True)\n",
     "    outcome = e.outcome(action)"
    ]
@@ -1046,7 +1048,7 @@
    "source": [
     "# Assignment\n",
     "\n",
-    "## 1. The agent who banged its head on the wall \n",
+    "## 1. The agent who smacked their head against the wall\n",
     "\n",
     "Give a positive valence to the `bump` interaction. \n",
     "Observe that the agent will place itself in front of a wall and keep buming into it as if it enjoied it!\n",
@@ -1058,30 +1060,6 @@
     "## 3. The agent who ran\n",
     "\n",
     "Choose the valences to make the agent go away from the target. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4f2449d-1ae9-495e-a26e-fc6a297c4438",
-   "metadata": {},
-   "source": [
-    "# Create the animated GIF "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 394,
-   "id": "77dd51a7-b14b-42af-b6fc-c015db2ce4be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import imageio.v2 as imageio\n",
-    "import os\n",
-    "\n",
-    "img_dir = f\"./{save_dir}\"\n",
-    "all_files = [os.path.join(img_dir, f) for f in os.listdir(img_dir) if f.endswith('.png')]\n",
-    "images = [imageio.imread(f) for f in all_files]\n",
-    "imageio.mimsave(\"movie.gif\", images, fps=4)"
    ]
   },
   {
